# adsy-sphinx-template

./: .gitignore  Makefile  README.md  README.rst  adsy.sty  adsyDoc.cls  adsyTemplate.tex  example.tex  pyproject.toml  sphinx.sty
adfinis_sphinx_theme/: __init__.py
adfinis_sphinx_theme/static/css/: adfinis.css
example/: Makefile  conf.py
html/adsy/: layout.html  sourcelink.html  theme.conf
html/adsy/static/: adsy.css_t  basic.css_t
html/adsy/static/css/: adsy.css  theme.css
html/adsy/static/fonts/: TheSansOffice.eot
includes/: formattings.tex  header_footer.tex  pagestyles.tex  spacings.tex  titlepage.tex  variables.tex
latex/: adsy.sty  adsyDoc.cls  sphinx.sty
latex/chapters/: chapter1.tex
latex/lead/: versions.tex
s5/adsy/: pretty.css
