[tool.poetry]
name = "adfinis_sphinx_theme"
version = "1.0.0"
description = "A small adjustment to the RTD theme to add some corporate ID"
authors = ["Samuel Hierholzer <samuel.hierholzer@adfinis.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
